# vuanem-pancake

./: .gitignore  load.py  main.py  pyproject.toml  requirements.txt  test_service.py
.github/workflows/: main.yaml
db/: bigquery.py
pancake/: get_Page_Statistics.py  get_statistics.py  pancake_service.py  test_service.py
pancake/pipeline/: define.py  interface.py  pages.py  tags.py
