[tool.poetry]
name = "pancake"
version = "0.1.0"
description = ""
authors = ["Bui Thu Ha <thuhak22ba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
requests = "^2.28.1"
google = "^3.0.0"
bigquery = "^0.0.32"
pytz = "^2022.6"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
